[project]
name = "obs-common"
version = "v2024.07.29"


[tool.ruff]
line-length = 88
src = ["src", "tests"]
target-version = "py38"

[tool.ruff.lint]
# Enable pycodestyle (E), pyflakes (F), bugbear (B), and bandit (S) rules
select = ["E", "F", "B", "S"]

ignore = ["E501"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.per-file-ignores]
"obs_common/license-check.py" = ["S603", "S607"]


[tool.pytest.ini_options]
filterwarnings = [
    "error",
]
