[project]
name = "obs-common"
description = "code shared between obs-team repositories"
dynamic = ["version"]

[project.scripts]
license-check = "obs_common.license_check:main"
service-status = "obs_common.service_status:main"

[build-system]
requires = ["setuptools", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.distutils.bdist_wheel]
universal = true

[tool.setuptools_scm]
# Empty is fine


[tool.ruff]
line-length = 88
src = ["src", "tests"]
target-version = "py38"

[tool.ruff.lint]
# Enable pycodestyle (E), pyflakes (F), bugbear (B), and bandit (S) rules
select = ["E", "F", "B", "S"]

ignore = ["E501"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.per-file-ignores]
"obs_common/license-check.py" = ["S603", "S607"]


[tool.pytest.ini_options]
filterwarnings = [
    "error",
]
