[package]
name = "informalsystems-pbjson-build"
version = "0.7.0"
authors = ["Raphael Taylor-Davies <r.taylordavies@googlemail.com>"]
edition = "2021"
description = "Generates Serialize and Deserialize implementations for prost message types"
license = "MIT"
keywords = ["protobuf", "json", "serde"]
categories = ["encoding"]
repository = "https://github.com/informalsystems/pbjson"

[lib]
name = "pbjson_build"

[dependencies]
heck = "0.4"
prost = "0.12"
prost-types = "0.12"
itertools = "0.12"

[dev-dependencies]
tempfile = "3.1"
