[package]
name = "pbjson-no-std"
version = "0.1.0"
edition = "2021"
publish = false
description = "A library for testing no_std compatibility of pbjson"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
informalsystems-pbjson = { path = "../pbjson", default-features = false }
informalsystems-pbjson-types = { path = "../pbjson-types", default-features = false }

