[package]
name = "informalsystems-pbjson-types"
version = "0.6.0"
authors = ["Raphael Taylor-Davies <r.taylordavies@googlemail.com>"]
description = "Protobuf well known types with serde serialization support"
edition = "2021"
license = "MIT"
keywords = ["protobuf", "json", "serde"]
categories = ["encoding"]
repository = "https://github.com/informalsystems/pbjson"
exclude = ["protos/*"]

[lib]
name = "pbjson_types"

[features]
default = ["std"]
std = ["bytes/std", "chrono/std", "informalsystems-pbjson/std", "prost/std", "serde/std", "serde_json/std"]

[dependencies] # In alphabetical order
informalsystems-pbjson = { path = "../pbjson", version = "0.6.0" , default-features = false }

bytes = { version = "1.0", default-features = false }
chrono = { version = "0.4", default-features = false, features = ["alloc"] }
prost = { version = "0.11", default-features = false, features = ["prost-derive"] }
serde = { version = "1.0", features = ["derive"], default-features = false }

[dev-dependencies]
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

[build-dependencies]
informalsystems-pbjson-build = { path = "../pbjson-build", version = "0.6.0" }
prost-build = "0.11"
